<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="-70dp"
        android:src="@drawable/eatquestlogo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="-80dp"
        android:layout_marginBottom="5dp"
        android:text=" Select food type:"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:entries="@array/foods_arrays"
        android:prompt="@string/food_prompt" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"
        android:text=" Select distance:"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:entries="@array/distance_arrays"
        android:prompt="@string/distance_prompt" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp"
        android:text=" Select maximum price level:"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:entries="@array/price_arrays"
        android:prompt="@string/price_prompt" />

    <Button
        android:id="@+id/btnMap"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="GO TO MAP"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />
</LinearLayout>