<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appbar"
            android:layout_margin="0dp"
            android:paddingTop="50dp"></android.support.v7.widget.RecyclerView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_anchor="@+id/appbar"
            app:layout_anchorGravity="top|center"
            tools:ignore="NotSibling">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <android.support.design.widget.TabLayout
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="left"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="-35dp"
                    android:adjustViewBounds="true"
                    android:maxWidth="100dp"
                    android:maxHeight="100dp"
                    android:src="@drawable/logo2" />

                <Button
                    android:id="@+id/get_list_sort_distance"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="165dp"
                    android:layout_marginTop="-35dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/option_sort_list_distance"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/get_list_sort_rating"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="250dp"
                    android:layout_marginTop="-35dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/option_sort_list_rating"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/get_list_sort_price"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="320dp"
                    android:layout_marginTop="-35dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/option_sort_list_price"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />

            </android.support.design.widget.AppBarLayout>

        </android.support.design.widget.AppBarLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>